# ScheduleAnything

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dev.md  format_code.py  pyproject.toml
.github/workflows/: ci.yml  validate-release.yml
documentation/: builtin_schedules.md  examples_and_tutorials.md  infrastructure.md  user_guide.md
examples/: Medium_Huggingface_Trainer_ScheduleAnything.ipynb  ScheduleAnything_Gradient_Norm_Threshold_Scheduling_Example.ipynb  ScheduleAnything_Logical_Batch_Size_Example.ipynb  ScheduleAnything_Weight_Decay_Example.ipynb  basic_weight_decay_scheduling.ipynb
src/torch_schedule_anything/: __init__.py  arbitrary_schedules.py  builtin_schedules.py  infrastructure.py
tests/: conftest.py  test_adapter.py  test_builtin_schedules.py  test_core_infrastructure.py  test_infrastructure.py  test_integration.py  test_package.py  test_synchronous_schedule.py
