[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-schedule-anything"
version = "1.0.1"
description = "Schedule any optimizer hyperparameter, not just learning rate"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Christopher O'Quinn", email = "chrisoquinn.2@gmail.com"}
]
keywords = ["deep-learning", "pytorch", "optimization", "scheduler", "hyperparameter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/smithblack-0/ScheduleAnything"
Repository = "https://github.com/smithblack-0/ScheduleAnything"
Documentation = "https://github.com/smithblack-0/ScheduleAnything"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
torch_schedule_anything = ["py.typed"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F401"]
